--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.3",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "three": "^0.151.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
