--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
+  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "serve": "nodemon server/server.js"
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
@@ -14,6 +18,8 @@
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1",
     "style-loader": "^3.3.1",
     "three": "^0.151.3",
     "webpack": "^5.75.0",
