--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "serve": "nodemon server/server.js"
+    "serve": "nodemon src/app-server.js"
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
@@ -25,5 +25,8 @@
     "webpack-cli": "^5.0.1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack-node-externals": "^3.0.0"
+  }
 }
