--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cannon-es-debugger": "^1.0.0",
     "cors": "^2.8.5",
     "css-loader": "^6.7.3",
+    "dat.gui": "^0.7.9",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
