--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack",
     "serve": "nodemon src/app-server.js",
     "run": "node src/app-server.js",
-    "deploy": "npm i && webpack && node src/app-server.js"
+    "deploy": "git pull && npm i && webpack && node src/app-server.js"
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
