--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "url-loader": "^4.1.1",
     "webpack-node-externals": "^3.0.0"
   }
 }
