--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1",
+    "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
     "three": "^0.151.3",
     "webpack": "^5.75.0",
