--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "serve": "nodemon src/app-server.js",
+    "serve:inspect": "nodemon --inspect src/app-server.js",
     "run": "node src/app-server.js",
     "deploy": "git pull && npm i && webpack && node src/app-server.js"
   },
