[FEATURE] google oauth

--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "cors": "^2.8.5",
     "css-loader": "^6.7.3",
     "dat.gui": "^0.7.9",
+    "dotenv": "^16.1.4",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "socket.io": "^4.6.1",
     "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
