--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@injectit/threejs-nodejs-exporters": "^0.0.2",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "cors": "^2.8.5",
@@ -30,6 +32,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
     "raw-loader": "^4.0.2",
     "socket.io": "^4.6.1",
     "stats.js": "^0.17.0",
