--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
+    "three": "^0.155.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
