--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "style-loader": "^3.3.1",
     "three": "^0.151.3",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "yuka": "^0.7.8"
   },
   "author": "",
   "license": "ISC",
